--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "pocketbase": "^0.21.4",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
